frontend/test/should_pass/basic_015.grg
rule r {
	x : Node;
	negative {
		x --> y : Node;
	}

	modify {
		x --> y : Node;
	}
}

