frontend/test/should_fail/negative_006.grg
rule r : (Node)
{
	negative {
		x:Node;
		return (x);
	}
	
	replace {
		x:Node;
		return (x);
	}
}
